--- a/public/admin_assets/css/sb-admin-2.css
+++ b/public/admin_assets/css/sb-admin-2.css
@@ -10861,13 +10861,13 @@ a:focus {
 }
 
 .bg-login-image {
-  background: url("https://source.unsplash.com/K4mSJ7kc0As/600x800");
+  background: url('/admin_assets/img/bg_login.jpeg');
   background-position: center;
   background-size: cover;
 }
 
 .bg-register-image {
-  background: url("https://source.unsplash.com/Mv9hjnEUHR4/600x800");
+  background: url('/admin_assets/img/bg_register.jpeg');
   background-position: center;
   background-size: cover;
 }
